@@ -9,6 +9,8 @@ use TBX::Min::ConceptEntry;
 use TBX::Min::LangGroup;
 use TBX::Min::TermGroup;
 use XML::Writer;
+use DateTime::Format::ISO8601;
+use Try::Tiny;
 # VERSION
 
 unless (caller){
@@ -52,15 +54,27 @@ sub new_from_xml {
 		# output_encoding => 'UTF-8',
 		# do_not_chain_handlers => 1, #can be important when things get complicated
 		keep_spaces		=> 0,
+
+        # these store new conceptEntries, langGroups and termGroups
+        start_tag_handlers => {
+            conceptEntry => \&_conceptStart,
+            langGroup => \&_langStart,
+            termGroup => \&_termGrpStart,
+        },
+
 		TwigHandlers    => {
 			# header attributes become attributes of the TBX::Min object
             id => \&_headerAtt,
-			description => \&_headerAtt,
-			subjectField => \&_subjectField,
-			creator => \&_headerAtt,
-			license => \&_headerAtt,
-			directionality => \&_headerAtt,
-			languages => \&_languages,
+            description => \&_headerAtt,
+            dateCreated => \&_date_created,
+            creator => \&_headerAtt,
+            license => \&_headerAtt,
+            directionality => \&_headerAtt,
+            languages => \&_languages,
+
+            # becomes part of the current TBX::Min::ConceptEntry object
+			subjectField => sub {
+                shift->{tbx_min_concepts}->[-1]->subject_field($_->text)},
 
 			# these become attributes of the current TBX::Min::TermGroup object
 			term => sub {shift->{tbx_min_current_term_grp}->term($_->text)},
@@ -71,11 +85,6 @@ sub new_from_xml {
 				shift->{tbx_min_current_term_grp}->customer($_->text)},
 			termStatus => sub {
 				shift->{tbx_min_current_term_grp}->status($_->text)},
-		},
-		start_tag_handlers => {
-			conceptEntry => \&_conceptStart,
-			langGroup => \&_langStart,
-			termGroup => \&_termGrpStart,
 		}
 	);
 
@@ -102,16 +111,21 @@ sub _get_handle {
 
 Creates a new C<TBX::Min> instance. Optionally you may pass in
 a hash reference which is used to initialize the object. The allowed hash
-fields are C<id>, C<creator>, C<license>, C<directionality>, C<source_lang>
-and C<target_lang>, which correspond to methods of the same name, and
-C<concepts>, which should be an array reference containing
-C<TBX::Min::ConceptEntry> objects.
+fields are C<id>, C<description>, C<date_created>, C<creator>, C<license>,
+C<directionality>, C<source_lang> and C<target_lang>, which correspond to
+methods of the same name, and C<concepts>, which should be an array reference
+containing C<TBX::Min::ConceptEntry> objects. This method croaks if
+C<date_created> is not in ISO 8601 format.
 
 =cut
 sub new {
     my ($class, $args) = @_;
     my $self;
     if((ref $args) eq 'HASH'){
+        #don't store a plain string for datetime
+        if(my $dt_string = $args->{date_created}){
+            $args->{date_created} = _parse_datetime($dt_string);
+        }
         $self = $args;
     }else{
         $self = {};
@@ -144,6 +158,36 @@ sub description {
         return $self->{description} = $description;
     }
     return $self->{description};
+}
+
+=head2 C<date_created>
+
+Get or set the the date that the document was created. This should be a
+string in ISO 8601 format. This method croaks if C<date_created> is not
+in ISO 8601 format.
+
+=cut
+sub date_created {
+    my ($self, $date_created) = @_;
+    if($date_created) {
+        return $self->{date_created} =
+            _parse_datetime($date_created);
+    }
+    if(my $dt = $self->{date_created}){
+        return $dt->iso8601;
+    }
+    return;
+}
+
+sub _parse_datetime {
+    my ($dt_string) = @_;
+    my $dt;
+    try{
+        $dt = DateTime::Format::ISO8601->parse_datetime($dt_string);
+    }catch{
+        croak 'date is not in ISO8601 format';
+    };
+    return $dt;
 }
 
 =head2 C<creator>
@@ -269,6 +313,11 @@ sub as_xml {
         push @atts, (target => $self->{target_lang}) if $self->{target_lang};
         $writer->emptyTag('languages', @atts);
     }
+    if(my $dt = $self->{date_created}){
+        $writer->startTag('dateCreated');
+        $writer->characters($dt->iso8601);
+        $writer->endTag;
+    }
     $writer->endTag; # header
 
     $writer->startTag('body');
@@ -337,10 +386,16 @@ sub as_xml {
 # all of the twig handlers store state on the XML::Twig object. A bit kludgy,
 # but it works.
 
-sub _headerAtt{
-	my ($twig, $_) = @_;
-	${ $twig->{'tbx_min_att'} }{_decamel($_->name)} = $_->text;
+sub _headerAtt {
+	my ($twig, $node) = @_;
+	$twig->{tbx_min_att}->{_decamel($node->name)} = $node->text;
 	return 1;
+}
+
+sub _date_created {
+    my ($twig, $node) = @_;
+    $twig->{tbx_min_att}->{date_created} =
+        _parse_datetime($node->text);
 }
 
 # turn camelCase into camel_case
@@ -351,11 +406,11 @@ sub _decamel {
 }
 
 sub _languages{
-	my ($twig, $_) = @_;
-	if(my $source = $_->att('source')){
+	my ($twig, $node) = @_;
+	if(my $source = $node->att('source')){
 		${ $twig->{'tbx_min_att'} }{'source_lang'} = $source;
 	}
-	if(my $target = $_->att('target')){
+	if(my $target = $node->att('target')){
 		${ $twig->{'tbx_min_att'} }{'target_lang'} = $target;
 	}
 	return 1;
