@@ -3,6 +3,7 @@
     <header>
         <id>TBX sample</id>
         <description>A short sample file demonstrating TBX-Min</description>
+        <dateCreated>2013-11-12T00:00:00</dateCreated>
         <languages source="de" target="en"/>
         <creator>Klaus-Dirk Schmidt</creator>
         <directionality>bidirectional</directionality>
